<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">Broadcast Chat</string>
    <string name="create_btn">Create</string>
    
    <!--  BroadcastChat -->
    <string name="send">Send</string>
    
    <!--  Create Room Strings -->
    <string name="room_name_lbl">Chat room name: </string>
    
    <!--  Dashboard Strings -->
    <string name="title">Broadcast Chat</string>
    <string name="author">Kristian H. Sejersen</string>
    <string name="createbenny"> Room</string>
    
    <string name="globalbtn">Global Chat</string>
    <string name="profilebtn">Profile</string>
    <string name="createroombtn">Create Room</string>
    <string name="roomsbtn">Rooms</string>
    
    <!--  Profile Strings -->
    <string name="profilelbl">Profile name: </string>
    <string name="saveprofile">Save</string>
    
    <!--  Rooms List -->
    <string name="contextmenu_delete_room">Delete Room</string>
    
</resources>
